--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {},
   "repository": {
